<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WAID Recognizer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="recognizer_service_name">WAID Recognizer Service</string>
    <string name="recognizer_service_loading">Recognizer service is starting</string>
    <string name="recognizer_service_stopped">Recognizer service has stopped</string>
    <string name="recognizer_service_loaded">Recognizer service is active</string>
    <string name="title_activity_magnitude">Magnitude</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="magnitude">Magnitude</string>
    <string name="sensor_not_available">Not available</string>
    <string name="model_generating">Generating new model&#8230;</string>
    <string name="model_generated">New model generated</string>
    <string name="model_generation_error">Unknown error while generating the new model</string>
    <string name="model_generation_ioexception">Error while generating the new model. Could not read or write file.</string>
    <string name="model_generation_exception">Error while generating the new model. Classification error.</string>
    <string name="recognizer_started">Vehicle Recognizer started</string>
    <string name="recognizer_stopped">Vehicle Recognizer stopped</string>
    <string name="error">Error</string>
    <string name="error_empty_field">History length or sampling rate missing!</string>
    <string name="error_isgenerating">The application is busy</string>
    <string name="history_empty">No Item</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pref_sampling_delay_title">Sampling delay</string>
    <string name="pref_sampling_delay_desc">The number of seconds between each evaluation</string>
    <string name="temp_description">Temporary Viewer</string>
    <string name="training">Training</string>
    <string name="training_service_name">Training Service</string>
    <string name="training_service_connected">Training Service connected</string>
    <string name="training_service_disconnected">Training Service disconnected</string>
    <string name="training_service_started">Training Service started</string>
    <string name="training_service_running">Training Service running</string>
    <string name="training_service_label">Training Service</string>
    <string name="training_service_stopped">Training Service stopped</string>
    <string name="reset_default_model">Reset Default Model</string>
    <string name="training_freq_label">Training Frequency (ms)</string>
    <string name="default_training_freq">5000</string>
    <string name="mode_overwrite">Overwrite</string>
    <string name="mode_append">Append</string>
    <string name="training_confirm_overwrite">This will overwrite the existing measurements for this vehicle. Continue?</string>
    <string name="training_confirm_append">This will modify the existing measurements for this vehicle. Continue?</string>
    <string name="start_training_button">Start Training</string>
    <string name="stop_training_button">Stop Training</string>
    <string name="title_activity_recognizer_settings">Recognizer Settings</string>
    <string name="sampling_delay_set_max">Maximum delay limited to </string>
    <string name="sampling_delay_set_min">minimum delay limited to </string>
    <string name="start_delay_set_max">Maximum delay limited to </string>
    <string name="start_delay_set_min">minimum delay limited to </string>
    <string name="pref_training_start_delay_title">Training start delay</string>
    <string name="pref_training_start_delay_desc">The number of seconds before the training starts</string>
    <string name="title_activity_training_settings">Training Settings</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="lblack">#101010</color>

    <string name="title_activity_history">HistoryActivity</string>
    <string name="history">History</string>
    <string name="delete_history_file">Delete</string>
    <string name="recognizer">Recognizer</string>
    <string name="preferences">Preferences</string>
    <string name="vehicles">Vehicles</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="remove_vehicle">Remove Vehicle</string>
    <string name="confirm_model_reset">This will restore the default model and vehicles. Continue?</string>
    <string name="instances_suffix">instances</string>

</resources>