<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <header
        android:id="@+id/vehicles_fragment_header"
        android:fragment="it.unibo.cs.jonus.waidrec.VehiclesFragment"
        android:icon="@drawable/ic_launcher"
        android:title="@string/vehicles" />

    <header
        android:fragment="it.unibo.cs.jonus.waidrec.MainPrefsActivity$RecPrefsFragment"
        android:icon="@drawable/ic_launcher"
        android:title="@string/recognizer" />
    
    <header
        android:fragment="it.unibo.cs.jonus.waidrec.MainPrefsActivity$TrnPrefsFragment"
        android:icon="@drawable/ic_launcher"
        android:title="@string/training" />
    
    <header
        android:id="@+id/reset_default_model"
        android:icon="@drawable/ic_action_discard_dark"
        android:key="reset_default_model"
        android:title="@string/reset_default_model" />

</preference-headers>