<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TrainingActivity" >

    <Spinner
        android:id="@+id/classesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/stopTrainingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/classesSpinner"
        android:layout_centerHorizontal="true"
        android:onClick="stopTraining"
        android:text="@string/stop_training_button" />

    <Button
        android:id="@+id/startTrainingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stopTrainingButton"
        android:layout_centerHorizontal="true"
        android:onClick="startTraining"
        android:text="@string/start_training_button" />

    <Button
        android:id="@+id/resetModelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="resetModel"
        android:text="@string/reset_default_model" />

    <EditText
        android:id="@+id/trainingFreqInput"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainingFreqLabel"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_training_freq" />

    <TextView
        android:id="@+id/trainingFreqLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classesSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/training_freq_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/modeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainingFreqInput"
        android:layout_centerHorizontal="true" >

        <RadioButton
            android:id="@+id/overwriteRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mode_overwrite" />

        <RadioButton
            android:id="@+id/appendRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_append" />
    </RadioGroup>

</RelativeLayout>